buildscript {
    repositories {
        maven { url "https://www.jetbrains.com/intellij-repository/releases/" }
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
        google()
        gradlePluginPortal()
        mavenLocal()
    }
}

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.2'
    // Gradle Changelog Plugin
    id 'org.jetbrains.changelog' version "1.3.1"
    // Gradle Qodana Plugin
    id 'org.jetbrains.qodana' version "0.1.13"
    id 'io.freefair.lombok' version "8.0.1"
}

allprojects {
    repositories {
        maven { url "https://www.jetbrains.com/intellij-repository/releases/" }
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
        google()
        gradlePluginPortal()
        mavenLocal()
    }
}

group 'com.plugins.mybaitslog.idea.plugin'
version '5.0.7.1'

dependencies {
    compileOnly 'org.jetbrains:annotations:24.0.1'
    implementation 'com.google.code.gson:gson:2.9.1'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    // compile project(":probe-agent") 另一种引入工程的方式
    implementation fileTree(dir: 'libs', includes: ['*jar'])
}

/*测试关闭*/
java {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

/*https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions*/
/*https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension*/
intellij {
    pluginName = 'MybatisLog'
    // 开发环境运行时使用的版本，不同的版本编译会采用默认支持java版本编译
    version = '2022.3.2'
    //沙箱目录位置，用于保存IDEA的设置，默认在build文件下面，防止clean，放在根目录下。
    sandboxDir = "${rootProject.rootDir}/idea-sandbox"
    type = 'IU'
    // 依赖的插件
    plugins = ['java']
    //Disables updating since-build attribute in plugin.xml
    updateSinceUntilBuild = false
    downloadSources = false
    //localPath = '/Applications/IntelliJ IDEA.app/Contents'
    //localPath = '/Applications/WebStorm.app/Contents'
}

runIde {
    jvmArgs = [
            "-javaagent:/Applications/jetbra/fineagent.jar=jetbrains",
            "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
            "--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED"]
}
